tests/snapshots/snapshot_integration__dot_polyline__try_catch_statements.snap
---
source: tests/snapshot_integration.rs
expression: output
---
digraph {
graph [splines=polyline];
D0 [shape=box, style=rounded, label="begin"];
{rank = sink; D1 [shape=box, style=rounded, label="end"];}
D4 [shape=box, label="int v = 0;"];
D6 [shape=box, label="return v;"];
D4 -> D6;
D6 -> D1;
D0 -> D4;
}
